# PeriodiCode

./: Cargo.toml  README.md  dollar_underscore.periodicode  example.periodicode  example2.periodicode  future.periodicode  future_block.periodicode  future_example.periodicode  literal.periodicode  long_tutorial.periodicode  sample.periodicode  summary.periodicode  to_deterministic.bnf
snippet/: set_radix_to_oct.periodicode
src/: main.rs  numerical_util.rs  parse.rs  parse_bare_expression.rs  print.rs  test.rs
src/parse/: numeric_literal.rs
