[package]
name = "periodicode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
big_s = "1.0.2"
num-bigint = "0.4.4"
num-rational = "0.4.1"
num-traits = "0.2.17"
once_cell = "1.19.0"
regex = "1.10.2"
